--- a/20221213_takeuchi.html
+++ b/20221213_takeuchi.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../20221213_takeuchi/css/reset.css">
-  <link rel="stylesheet" href="../20221213_takeuchi/css/style.css">
-  <link rel="icon" href="../20221213_takeuchi/img/favicon.ico">
-  <link rel="apple-touch-icon" href="../20221213_takeuchi/img/apple-touch-icon.png">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="img/favicon.ico">
+  <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 
   <title>CORCHTECH</title>
 </head>
