--- a/20221213_takeuchi.html
+++ b/20221213_takeuchi.html
@@ -26,7 +26,7 @@
   <main>
     <div class="contents">
       <h1 class="ttl">毎日を笑顔に</h1>
-      <img src="../20221213_takeuchi/img/firstview.jpeg" alt="きらきら">
+      <img src="img/firstview.jpeg" alt="きらきら">
       <div class="blue_box"></div>
 
 
